RESOLVED FIXED288975
REGRESSION(291449@main?): [MacOS Debug] Two tests are constant crashes in http/wpt/webauthn/public-key-credential (failure in EWS)
https://bugs.webkit.org/show_bug.cgi?id=288975
Summary REGRESSION(291449@main?): [MacOS Debug] Two tests are constant crashes in htt...
Marta Darbinyan
Reported 2025-03-03 09:48:43 PST
The following tests are constantly crashing on macOS Debug started from 291449@main http/wpt/webauthn/public-key-credential-create-success-ccid.https.html http/wpt/webauthn/public-key-credential-get-success-ccid.https.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x1292d5298 WTFCrashWithInfo(int, char const*, char const*, int) 1 com.apple.WebKit 0x1292eaca4 WTF::RefCountedBase::ref() const 2 com.apple.WebKit 0x12b9d87dc WTF::RefCountedAndCanMakeWeakPtr<WebKit::CcidConnection>::ref() const 3 com.apple.WebKit 0x12b9db860 WTF::DefaultRefDerefTraits<WebKit::CcidConnection const>::ref(WebKit::CcidConnection const&) 4 com.apple.WebKit 0x12b9db830 WTF::Ref<WebKit::CcidConnection const, WTF::RawPtrTraits<WebKit::CcidConnection const>, WTF::DefaultRefDerefTraits<WebKit::CcidConnection const>>::Ref(WebKit::CcidConnection const&) 5 com.apple.WebKit 0x12b9b3dd0 WTF::Ref<WebKit::CcidConnection const, WTF::RawPtrTraits<WebKit::CcidConnection const>, WTF::DefaultRefDerefTraits<WebKit::CcidConnection const>>::Ref(WebKit::CcidConnection const&) 6 com.apple.WebKit 0x12b9b39bc WebKit::CcidConnection::transact(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&, WTF::Function<void (WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&)>&&) const 7 com.apple.WebKit 0x12b9b38f8 WebKit::CcidConnection::detectContactless() 8 com.apple.WebKit 0x12b9b3658 WebKit::CcidConnection::startPolling() 9 com.apple.WebKit 0x12b9b34b8 WebKit::CcidConnection::CcidConnection(WTF::RetainPtr<TKSmartCard>&&, WebKit::CcidService&) 10 com.apple.WebKit 0x12b9b33e0 WebKit::CcidConnection::CcidConnection(WTF::RetainPtr<TKSmartCard>&&, WebKit::CcidService&) 11 com.apple.WebKit 0x12b9b32e4 WebKit::CcidConnection::create(WTF::RetainPtr<TKSmartCard>&&, WebKit::CcidService&) 12 com.apple.WebKit 0x12b9b4e70 WebKit::CcidService::onValidCard(WTF::RetainPtr<TKSmartCard>&&) 13 com.apple.WebKit 0x12bae5d0c WebKit::MockCcidService::platformStartDiscovery() 14 com.apple.WebKit 0x12b9b485c WebKit::CcidService::startDiscoveryInternal() 15 com.apple.WebKit 0x12c592c58 WebKit::AuthenticatorTransportService::startDiscovery()::$_0::operator()() const 16 com.apple.WebKit 0x12c592b1c WTF::Detail::CallableWrapper<WebKit::AuthenticatorTransportService::startDiscovery()::$_0, void>::call() 17 com.apple.JavaScriptCore 0x10b52ee18 WTF::Function<void ()>::operator()() const 18 com.apple.JavaScriptCore 0x10b5fbe8c WTF::RunLoop::performWork() 19 com.apple.JavaScriptCore 0x10b600288 WTF::RunLoop::performWork(void*) 20 com.apple.CoreFoundation 0x1885748a4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 /AppleInternal/Library/BuildRoots/ccc52ca0-be37-11ef-914f-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:1970 21 com.apple.CoreFoundation 0x188574838 __CFRunLoopDoSource0 + 176 /AppleInternal/Library/BuildRoots/ccc52ca0-be37-11ef-914f-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2014 22 com.apple.CoreFoundation 0x18857459c __CFRunLoopDoSources0 + 244 /AppleInternal/Library/BuildRoots/ccc52ca0-be37-11ef-914f-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2051 23 com.apple.CoreFoundation 0x188573138 __CFRunLoopRun + 840 /AppleInternal/Library/BuildRoots/ccc52ca0-be37-11ef-914f-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:2969 24 com.apple.CoreFoundation 0x188572734 CFRunLoopRunSpecific + 588 /AppleInternal/Library/BuildRoots/ccc52ca0-be37-11ef-914f-aabfac210453/Library/Caches/com.apple.xbs/Sources/CoreFoundation/CoreFoundation/RunLoop.subproj/CFRunLoop.c:3434 25 com.apple.Foundation 0x189743518 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212 /AppleInternal/Library/BuildRoots/cf117d38-cf63-11ef-b315-aabfac210453/Library/Caches/com.apple.xbs/Sources/Foundation/Foundation/Soil.subproj/NSRunLoop.m:373 26 WebKitTestRunner 0x102f27940 WTR::TestController::platformRunUntil(bool&, WTF::Seconds) 27 WebKitTestRunner 0x102ed823c WTR::TestController::runUntil(bool&, WTF::Seconds) 28 WebKitTestRunner 0x102f3ec78 WTR::TestInvocation::invoke() 29 WebKitTestRunner 0x102ee1f3c WTR::TestController::runTest(char const*) 30 WebKitTestRunner 0x102ee2664 WTR::TestController::runTestingServerLoop() 31 WebKitTestRunner 0x102ed8d20 WTR::TestController::run() 32 WebKitTestRunner 0x102ed8534 WTR::TestController::TestController(int, char const**) 33 WebKitTestRunner 0x102ed8dec WTR::TestController::TestController(int, char const**) 34 WebKitTestRunner 0x102e70108 main 35 dyld 0x18810c274 start + 2840 /AppleInternal/Library/BuildRoots/cf117d38-cf63-11ef-b315-aabfac210453/Library/Caches/com.apple.xbs/Sources/dyld/dyld/dyldMain.cpp:1338 Test result: https://ews-build.webkit.org/#/builders/122/builds/14764 Test History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=http%2Fwpt%2Fwebauthn%2Fpublic-key-credential-create-success-ccid.https.html&test=http%2Fwpt%2Fwebauthn%2Fpublic-key-credential-get-success-ccid.https.html&style=debug
Attachments
Radar WebKit Bug Importer
Comment 1 2025-03-03 09:49:09 PST
Chris Dumez
Comment 2 2025-03-03 10:37:54 PST
EWS
Comment 3 2025-03-03 13:19:05 PST
Committed 291520@main (82fd30b6339c): <https://commits.webkit.org/291520@main> Reviewed commits have been landed. Closing PR #41780 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.