REGRESSION(291449@main): [MacOS Debug] Two tests are constant crashes in http/wpt/webauthn/public-key-credential (failure in EWS) https://bugs.webkit.org/show_bug.cgi?id=288975 rdar://146027480

Reviewed by Ryosuke Niwa.

After 291449@main, CcidConnection also gets ref/deref'd on the main thread but it
wasn't ThreadSafeRefCounted. As a result, it would hit the threading assertions in
RefCounted.

* Source/WebKit/UIProcess/WebAuthentication/Cocoa/CcidConnection.h:
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/CcidConnection.mm:
(WebKit::CcidConnection::detectContactless):
(WebKit::CcidConnection::trySelectFidoApplet):

Canonical link: https://commits.webkit.org/291520@main